Implementing further convenience methods and shortening function names.

--- a/clients/browser/nano.html
+++ b/clients/browser/nano.html
@@ -411,13 +411,7 @@
             // XXX Legacy components
             $.walletStore = await new Nimiq.WalletStore();
             // Load or create main wallet.
-            let mainWallet = await $.walletStore.getMainWallet();
-            if (!mainWallet) {
-                mainWallet = await Nimiq.Wallet.generate();
-                await $.walletStore.putWallet(mainWallet);
-                await $.walletStore.setMainWallet(mainWallet.address);
-            }
-            $.wallet = mainWallet;
+            $.wallet = await $.walletStore.getDefault();
 
             bcTitle.classList.add('connecting');
             $.network.connect();
